layUi常见前端UI已学完

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<!--https://ukoko.gitee.io/2022/05/16/%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8layui/#more-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>LayUiLearn</title>
+    <link rel="stylesheet" href="layui/css/layui.css"/>
 </head>
 <body>
-
+<script src="layui/layui.js"></script>
 </body>
 </html>
